@@ -163,13 +163,13 @@
 0xA2	0x0105
 0xA3	0x0141
 0xA4	0x20AC
-0xA5	0x00AB
+0xA5	0x201E
 0xA6	0x0160
 0xA7	0x00A7
 0xA8	0x0161
 0xA9	0x00A9
 0xAA	0x0218
-0xAB	0x201E
+0xAB	0x00AB
 0xAC	0x0179
 0xAD	0x00AD
 0xAE	0x017A
