@@ -1,3 +1,9 @@
+2001-07-28  Bruno Haible  <haible@clisp.cons.org>
+
+	* tools/Makefile (iso8859_16.h): Generate from the unicode.org table.
+	* lib/iso8859_16.h: Regenerated.
+	* tests/ISO-8859-16.TXT: Swap the values of 0xA5 and 0xAB.
+
 2001-07-17  Bruno Haible  <haible@clisp.cons.org>
 
 	* configure.in (VERSION): Define. Needed by djgpp/Makefile.maint.
